yaapp/media/css/webapp.css
/**
 * Common
 */
body {
    margin-top: 80px;
    background-color: #f0f0f0;
}

.hidden {
    visibility: hidden;
}

.share {
    float: left;
    margin-right: 12px;
    margin-top: 2px;
}

.cell-pagination {
    float: left;
    with: 148px;
}

#profile-radios {
    margin-top: 24px;
}

/**
 * Header
 */
#header .navbar-inner {
    background-image: url(/media/app/images/header_bg.png);
    background-repeat: repeat-x;
    height: 76px;
}

#brand-logo {
    display:block;
    float:left;
    margin-top:27px;
    width:138px;
    height:23;
}

.header-separation {
    display:block;
    float:left;
    margin-top:14px;
    margin-left:20px;
}

#sound-quality {
    display:block;
    float:left;
    padding-top:25px;
    padding-left:20px;
    position:relative;
}


.switch-container {
    margin-top:25px;
    margin-left:20px;
    float:left;
    display:block;
    height:25px;
    width:80px;
    position:relative;
    overflow:hidden;
}

.switch-container input[type="checkbox"] {
    -webkit-appearance:none;
    opacity:0;    
    height:25px;
    width:80px;
    position:absolute;
    border:none;
    z-index: 2;
}

.switch-container input[type="checkbox"]~.hd-bg {
    display:inline-block;
    height:25px;
    width:80px;
    position:absolute;
    background-image:url('../app/images/SD-HD.png');
    background-position:-46px 50%;
    background-repeat:no-repeat;
    border-radius:20px;
    border:none;
    -webkit-transition:background-position 0.2s ease;
    -moz-transition:background-position 0.2s ease;
    transition:background-position 0.2s ease;
    z-index: 0;
}

.switch-container input[type="checkbox"]:checked~.hd-bg {
    background-position:10px 50%;
}

.switch {
    display:inline-block;
    height:25px;
    width:70px;
    position:absolute;
    background-image:url('../app/images/SD-HD.png');
    background-position:-45px 50%;
    background-repeat:no-repeat;
}

#SD {
    position:absolute;
    left:55px;
    top:31px;
}

#radio-picto {
    height:32px;
    width:32px;
    display:inline-block;
    float:left;
    margin: 21px 0px 0px 21px;
}

#favorite-radio {
    height:36px;
    width:37px;
    display:inline-block;
    float:left;
    margin: 21px 0px 0px 19px;
}

.is-not-favorite {
    background-image:url("/media/app/images/favorite-radio.png") ;
}

.is-favorite {
    background-image:url('../app/images/over-star.png');
}

#favorite-radio:hover{
    background-image:url('../app/images/over-star.png');
    height:36px;
    width:37px;
    display:inline-block;
    float:left;
    margin: 21px 0px 0px 19px;
}

#play-btn {
    -webkit-appearance: none;
    border: none;
    height:33px;
    width:33px;
    display:inline-block;
    float:left;
    margin: 21px 0px 0px 19px;
    border-radius:50%;
    background-image:url('../app/images/play-btn-bg.png');
    box-shadow: 0px 2px 2px #202223;
    position:relative;
    cursor:pointer;
}

#play-btn i {
    position:absolute;
    top:9px;
    left:10px;
}


#title-volume {
    height:76px ;
    width:200px;
}

.ui-slider .ui-slider-handle {  
    position: absolute;
    z-index: 2;  
    width: 20px;
    height: 20px;  
    cursor: pointer;  
    background: url('../app/images/volume-btn.png') no-repeat 50% 50%;  
    font-weight: bold;  
    color:#1C94C4;  
    outline:none;  
    top:-7px;  
    margin-left:-12px;
    border:none;
}

.ui-slider .ui-slider-range {
    background-image: url('../app/images/slider-range-bg.png');
    position: absolute;
    border: 0;  
    top: 0;  
    height: 69%;  
    border-radius: 25px;
    border:1px solid black;
    shadow-box: 0px 1px 1px #313334 ;
    background-color:black;
}

#sound-level {
    display:inline-block;
    float:left;
    width:188px;
    padding-top:17px;
    padding-left:20px;
}

#slider-container {
    float:left;
    width:150px;
	position:relative;
}

#volume-slider{  
    margin-top:10px;
    height:9px;
    width:149px;
    background: url('../app/images/level-bar.png');
    background-repeat:no-repeat;
    border:none;
	position:absolute;
	top:20px;
	left:5px;
}

#min-level {
    display:inline-block;
    float:left;
    margin-top:23px;
    margin-right:6px;
}

#level-bar {
    background-image:url('../app/images/level-bar.png');
    background-position:center;
}

#max-level {
    display:inline-block;
    float:right;
    margin-top:23px;
}


.header-social-btn {
    float:left;
    display:inline-block;
    padding: 38px 0px 0px 10px;
}

#first-social-btn {
    padding-left:17px;
}

#share-btn {
    display:inline-block;
    float:left;
    height:18px;
    width:24px;
    background-image:url('../app/images/share-btn.png');
}

#share-btn:hover {
    display:inline-block;
    float:left;
    height:18px;
    width:24px;
    background-image:url('../app/images/hover-share-btn.png');
}

#love-btn {
    display:inline-block;
    float:left;
    height:18px;
    width:20px;
    background-image:url('../app/images/love-btn.png');
    background-repeat:no-repeat;
}

#love-btn:hover {
    display:inline-block;
    float:left;
    height:18px;
    width:20px;
    background-image:url('../app/images/hover-love-btn.png');
    background-repeat:no-repeat;
}

#shop-btn {
    display:inline-block;
    float:left;
    height:19px;
    width:25px;
    background-image:url('../app/images/shop-btn.png');
    background-repeat:no-repeat;
}

#shop-btn:hover {
    display:inline-block;
    float:left;
    height:19px;
    width:25px;
    background-image:url('../app/images/hover-shop-btn.png');
    background-repeat:no-repeat;
}

#profile-picture {
    float:left;
    display:inline-block;
    padding: 19px 0px 0px 16px;
	text-decoration:none;
}

.header-notification {
    width:38px;
    height:38px;
    position:relative;
    float:left;
    display:inline-block;
    padding: 19px 0px 0px 25px;
}
/* ... */

